--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "baseHref": "/",
+              "baseHref": "/angular-permissions/dist/",
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
